// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OpinionSource /> should render a li bordered 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="opinion block--bordered bg-vip"
  id="source-1"
  listItem={false}
>
  <div
    className="opinion__body box"
  >
    <Connect(UserAvatar)
      className="pull-left"
      user={
        Object {
          "displayName": "author1",
          "id": "author1",
          "media": null,
          "url": "https://capco/dev/profile/author1",
          "vip": true,
        }
      }
    />
    <div
      className="opinion__data"
    >
      <Relay(OpinionInfos)
        opinion={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": true,
            },
            "id": "1",
          }
        }
        rankingThreshold={null}
      />
      <Relay(OpinionSourceTitle)
        source={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": true,
            },
            "id": "1",
          }
        }
      />
      <Relay(OpinionSourceContent)
        source={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": true,
            },
            "id": "1",
          }
        }
      />
      <div
        className="opinion__votes excerpt small"
      >
        <Relay(Connect(OpinionSourceButtons))
          source={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "displayName": "author1",
                "id": "author1",
                "media": null,
                "url": "https://capco/dev/profile/author1",
                "vip": true,
              },
              "id": "1",
            }
          }
          sourceable={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "id": "sourceableId",
            }
          }
        />
      </div>
    </div>
  </div>
</ListGroupItem>
`;

exports[`<OpinionSource /> should render a white li if not vip 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="opinion block--bordered"
  id="source-1"
  listItem={false}
>
  <div
    className="opinion__body box"
  >
    <Connect(UserAvatar)
      className="pull-left"
      user={
        Object {
          "displayName": "author1",
          "id": "author1",
          "media": null,
          "url": "https://capco/dev/profile/author1",
          "vip": false,
        }
      }
    />
    <div
      className="opinion__data"
    >
      <Relay(OpinionInfos)
        opinion={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": false,
            },
            "id": "1",
          }
        }
        rankingThreshold={null}
      />
      <Relay(OpinionSourceTitle)
        source={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": false,
            },
            "id": "1",
          }
        }
      />
      <Relay(OpinionSourceContent)
        source={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": false,
            },
            "id": "1",
          }
        }
      />
      <div
        className="opinion__votes excerpt small"
      >
        <Relay(Connect(OpinionSourceButtons))
          source={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "displayName": "author1",
                "id": "author1",
                "media": null,
                "url": "https://capco/dev/profile/author1",
                "vip": false,
              },
              "id": "1",
            }
          }
          sourceable={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "id": "sourceableId",
            }
          }
        />
      </div>
    </div>
  </div>
</ListGroupItem>
`;
